feat: controller show feat: view single comic fix: route comics feat: new variable color in scss

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -16,4 +16,7 @@
 @import './partials/homeMain';
 
 //Comics Page
-@import './partials/comicsMain'
+@import './partials/comicsMain';
+
+//show Page
+@import './partials/comicsShow';
