--- a/resources/scss/partials/_variables.scss
+++ b/resources/scss/partials/_variables.scss
@@ -1,3 +1,4 @@
 $primaryColor : rgb(2, 130, 249);
+$titleColor: rgb(0, 63, 94);
 $secondaryColor : rgb(28, 28, 28);
 $ternaryColor :rgb(48, 48, 48);
