--- a/resources/scss/partials/_comicsMain.scss
+++ b/resources/scss/partials/_comicsMain.scss
@@ -131,6 +131,7 @@
             width: calc(100% / 5);
 
             display: flex;
+            justify-content: center;
             align-items: center;
 
 
