--- a/resources/scss/partials/_comicsShow.scss
+++ b/resources/scss/partials/_comicsShow.scss
@@ -1,12 +1,36 @@
 .home-main {
 
     .container {
+        display: flex;
+        flex-flow: column;
+        justify-content: space-between;
+
+
+        .img-wrapper {
+            position: relative;
+            padding: .6em 0;
+
+            img {
+                position: absolute;
+                bottom: 45px;
+                z-index: 2;
+                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.564);
+
+                width: 200px;
+            }
+
+        }
+
         .main-content {
+            display: flex;
+            padding: 2em;
 
             .description {
+                width: 70%;
+                height: 100%;
                 display: flex;
                 flex-direction: column;
-                width: 70%;
+
 
                 .title {
                     color: $titleColor;
@@ -28,7 +52,12 @@
 
 
         .a-banner {
-            width: 30%;
+            width: 350px;
+
+            h6 {
+                color: rgba(71, 71, 71, 0.783);
+                font-weight: 700;
+            }
 
             img {
                 width: 100%;
