--- a/resources/scss/partials/_comicsShow.scss
+++ b/resources/scss/partials/_comicsShow.scss
@@ -45,6 +45,8 @@
                         }
                     }
                 }
+
+
             }
         }
 
@@ -65,4 +67,30 @@
 
 
     }
+}
+
+
+.buttons-wrapper {
+    transform: translateX(-50%) translateY(50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2em;
+    display: none // width: 500px;
+        // height: 200px;
+    ;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background: $white;
+
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.244);
+
+    #delete-conferm {
+        padding: 1em;
+    }
+}
+
+.open {
+    display: block;
 }
