--- a/resources/scss/partials/_comicsShow.scss
+++ b/resources/scss/partials/_comicsShow.scss
@@ -71,7 +71,7 @@
 
 
 .buttons-wrapper {
-    transform: translateX(-50%) translateY(50%);
+    transform: translateX(-50%) translateY(-50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -79,7 +79,8 @@
     display: none // width: 500px;
         // height: 200px;
     ;
-    position: absolute;
+    position: fixed;
+    z-index: 4;
     top: 50%;
     left: 50%;
     background: $white;
