--- a/resources/scss/partials/_comicsShow.scss
+++ b/resources/scss/partials/_comicsShow.scss
@@ -92,6 +92,20 @@
     }
 }
 
+
+#layout-black {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: .5;
+    z-index: 3;
+
+    display: none;
+}
+
 .open {
-    display: block;
+    display: block !important;
 }
